--- a/android/app/src/main/res/anim/out_animation.xml
+++ b/android/app/src/main/res/anim/out_animation.xml
@@ -7,7 +7,7 @@
     <alpha
         android:fillAfter="true"
         android:fillBefore="true"
-        android:fillEnable="true"
+        android:fillEnabled="true"
         android:fromAlpha="1.0"
         android:toAlpha="0" />
 
