--- a/android/app/src/main/res/xml/music_widget_info.xml
+++ b/android/app/src/main/res/xml/music_widget_info.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
      android:description="@string/app_widget_description"
-     android:initialKeyguardLayout="@Layout/music_widget"
-     android:initialLayout="@Layout/music_widget"
+     android:initialKeyguardLayout="@layout/music_widget"
+     android:initialLayout="@layout/music_widget"
      android:minWidth="180dp"
      android:minHeight="40dp"
      android:resizeMode="horizontal|vertical"
